# DataAcquisition

./: README.md  build.py  main.py  pyproject.toml  requirements.txt  version.json
Images/: Menlo_icon.ai
catx/: __init__.py
catx/core/: __init__.py  application.py  paths.py  version.py
catx/menlo/: __init__.py  client.py
catx/models/: __init__.py  acquisition.py
catx/repositories/: __init__.py  hdf5_file.py  project.py
catx/services/: __init__.py  acquisition.py  application_log.py
release/DataAcquisition/: Installation_guide.txt  profile_database.h5
release/DataAcquisition/h5py/: _conv.cp313-win_amd64.pyd  _errors.cp313-win_amd64.pyd  _npystrings.cp313-win_amd64.pyd  _objects.cp313-win_amd64.pyd  _proxy.cp313-win_amd64.pyd  _selector.cp313-win_amd64.pyd  defs.cp313-win_amd64.pyd  h5.cp313-win_amd64.pyd  h5a.cp313-win_amd64.pyd  h5ac.cp313-win_amd64.pyd  h5d.cp313-win_amd64.pyd  h5ds.cp313-win_amd64.pyd  h5f.cp313-win_amd64.pyd  h5fd.cp313-win_amd64.pyd  h5g.cp313-win_amd64.pyd  h5i.cp313-win_amd64.pyd  h5l.cp313-win_amd64.pyd  h5o.cp313-win_amd64.pyd  h5p.cp313-win_amd64.pyd  h5pl.cp313-win_amd64.pyd  h5r.cp313-win_amd64.pyd  h5s.cp313-win_amd64.pyd  h5t.cp313-win_amd64.pyd  h5z.cp313-win_amd64.pyd  utils.cp313-win_amd64.pyd
release/DataAcquisition/mpi4py/: MPI.cp313-win_amd64.pyd
release/DataAcquisition/numpy-2.4.1.dist-info/: RECORD  direct_url.json
release/DataAcquisition/ui/: __init__.py  (+5 more)
tests/: test_acquisition_storage.py  test_application_log.py  test_menlo_client.py
ui/: acquisition_main.py  data_manager.py  profile_manager.py
(+109 files in other folders)
