[project]
name = "DataAcquisition"
version = "0.1.0"
description = "PyQt6 THz acquisition and dotTHz project management application."
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "PyQt6==6.9.1",
    "PyQt6-Qt6==6.9.2",
    "numpy>=1.23",
    "websockets>=10",
    "nest-asyncio>=1.5",
    "h5py>=3.8",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "pytest>=7",
]

[project.scripts]
data-acquisition = "main:main"

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
